--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -5,7 +5,7 @@
 
 
 {% block body %}
-    <!-- Carousel displaying the roles !-->
+    <!-- Carousel displaying the roles -->
     <div class="container smallZoom">
         <div class="carousel">
             {% for role in roles %}
