--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -1,5 +1,5 @@
 <!-- NavBar  -->
-<nav class="lg_red_background" role="navigation">
+<nav class="lg-red-background" role="navigation">
   <div class="nav-wrapper container">
     
     <!-- Logo -->
@@ -8,7 +8,7 @@
     <!-- Navbar's item -->
     <ul class="right hide-on-med-and-down">
       <li>
-          <a class="smallZoom" href="#">
+          <a class="smallZoom" href="{{ path('role_sort') }}">
               <i class="material-icons left">search</i>
               Voir les Rôles
           </a>
@@ -41,25 +41,25 @@
 <!-- Side navbar -->
 <ul class="sidenav" id="side-navbar">
       <li>
-          <a class="smallZoom" href="#">
+          <a class="smallZoom lg-red-on-hover hover-bold" href="{{ path('role_sort') }}">
               <i class="material-icons left">search</i>
               Voir les Rôles
           </a>
       </li>
       <li>
-          <a class="smallZoom" href="#">
+          <a class="smallZoom lg-red-on-hover hover-bold" href="#">
               <i class="material-icons left">fiber_new</i>
               Nouvelle Partie
           </a>
       </li>
       <li>
-          <a class="smallZoom" href="#">
+          <a class="smallZoom lg-red-on-hover hover-bold" href="#">
               <i class="material-icons left">archive</i>
               Analyse des Résultats
           </a>
       </li>
       <li>
-          <a class="smallZoom" href="#">
+          <a class="smallZoom lg-red-on-hover hover-bold" href="#">
               <i class="material-icons left">account_circle</i>
               Mon Profil
           </a>
