--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,24 +3,18 @@
     font-family: Montserrat;
 }
 
-h1, h3
+h1, h2, h3
 {
     color:#7b1b24;
     text-align: center;
 }
-h1
-{
-    transition: transform .2s;
-    font-weight: bold;
-}
-h1:hover { transform: scale(1.05); }
 
+.lg-red  { color:rgb(123, 27, 36); }
+.lg-red-on-hover:hover  { color:rgb(123, 27, 36); }
+.lg-black { color:rgb(2, 5, 12); }
 
-.lg_red  { color:rgb(123, 27, 36); }
-.lg_black { color:rgb(2, 5, 12); }
-
-.lg_red_background  { background-color:rgb(123, 27, 36); }
-.lg_black_background {
+.lg-red-background  { background-color:rgb(123, 27, 36); }
+.lg-black-background {
     background-color: #000000;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg fill-opacity='0.13'%3E%3Cpolygon fill='%23220000' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%23440000' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%23660000' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%23880000' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%23A00' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E");
     background-attachment: fixed;
@@ -49,3 +43,8 @@ body, html
 
 
 .btn { background-color:rgb(123, 27, 36); }
+
+
+.hover-bold:hover {
+    font-weight: bold;
+  }
