--- a/templates/roles/sort.html.twig
+++ b/templates/roles/sort.html.twig
@@ -56,7 +56,7 @@
             <div class="row">
                 {% for role in array.roles %}
 
-                    <div class="col s3 smallZoom">
+                    <div class="col s12 m6 l3 smallZoom">
                         <div class="card" style="background-color: inherit">
                             
                             <div class="card-image">
