--- a/templates/roles/sort.html.twig
+++ b/templates/roles/sort.html.twig
@@ -5,35 +5,35 @@
 
 
 {% block body %}
-<br><br><br>
+    <br><br>
 
 
     <!-- Title -->
     <h1 class="container bold"> Rôles </h1>
 
 
-    <br><br><br>
+    <br><br>
 
 
     <!-- Buttons -->
     <div class="container row center">
     
         <div class="col s4 zoom">
-            <a class="waves-effect waves-light btn" style="background-color: rgb(123, 27, 36)" href="">
+            <a class="waves-effect waves-light btn" style="background-color: rgb(123, 27, 36)" href="{{ path('role_sort') }}?sortBy=1">
                 <i class="material-icons left">flag</i>
                 Faction
             </a>
         </div>
     
         <div class="col s4 zoom">
-            <a class="waves-effect waves-light btn" style="background-color: rgb(123, 27, 36)" href="">
+            <a class="waves-effect waves-light btn" style="background-color: rgb(123, 27, 36)" href="{{ path('role_sort') }}?sortBy=0">
                 <i class="material-icons left">select_all</i>
                 Voir tout
             </a>
         </div>
     
         <div class="col s4 zoom">
-            <a class="waves-effect waves-light btn" style="background-color: rgb(123, 27, 36)" href="">
+            <a class="waves-effect waves-light btn" style="background-color: rgb(123, 27, 36)" href="{{ path('role_sort') }}?sortBy=2">
                 <i class="material-icons left">wb_sunny</i>
                 Horaire Effet
             </a>
@@ -42,12 +42,11 @@
     </div>
 
 
-    <br><br><br>
-
-
     <!-- Show all Roles -->
     <div class="container">
         {% for array in data %}
+
+            <br><br>
 
             <!-- title of the current set -->
             <h2 style="color: {{ array.titleColor }}"> {{ array.title }} </h2>
@@ -64,10 +63,9 @@
                             </div>
 
                             <div class="card-content">
-                                <span class="card-title activator center white-text">
-                                    {{ role.name[:10] }}
-                                    <i class="material-icons right">more_vert</i>
-                                </span>
+                                <h6 class="activator center" style="font-weight: 600;color: {{ array.titleColor }}">
+                                    {{ role.name }}
+                                </h6>
                             </div>
 
                             <div class="card-reveal">
@@ -76,6 +74,25 @@
                                     <i class="material-icons right">close</i>
                                 </span>
                                 <p>{{ role.description | raw }}</p>
+                            </div>
+
+                        </div>
+                    </div>
+
+                {% else %}
+                
+                    <!-- else : there was 0 Role, so we display an error message instead -->
+
+                    <div class="col s12">
+                        <div class="card lg-black-background">
+                            
+                            <div class="card-content">
+                                <h3>Erreur...</h3>
+                                <h5 class="center">
+                                    Il n'y a pas de Rôle à afficher...
+                                    <br>
+                                    Désolé pour cet inconvénient :'(
+                                </h5>
                             </div>
 
                         </div>
