--- a/templates/roles/sort.html.twig
+++ b/templates/roles/sort.html.twig
@@ -49,7 +49,7 @@
             <br><br>
 
             <!-- title of the current set -->
-            <h2 style="color: {{ array.titleColor }}"> {{ array.title }} </h2>
+            <h2 style="color: {{ array.titleColor }}"> - {{ array.title }} - </h2>
 
             <!-- all the Roles within the set -->
             <div class="row">
