--- a/templates/components/errorNoParty.html.twig
+++ b/templates/components/errorNoParty.html.twig
@@ -3,7 +3,7 @@
         <div class="card-content">
             <h3>Erreur...</h3>
             <h5 class="center">
-                Il n'y a pas de Rôle à afficher...
+                Il n'y a pas de Partie à rejoindre pour le moment...
                 <br>
                 Désolé pour cet inconvénient :'(
             </h5>
