--- a/templates/roles/sort.html.twig
+++ b/templates/roles/sort.html.twig
@@ -5,8 +5,8 @@
 
 
 {% block body %}
+    
     <br><br>
-
 
     <!-- Title -->
     <h1 class="container bold"> Rôles </h1>
@@ -19,15 +19,15 @@
     <div class="container row center">
     
     
-        <div class="col s6 zoom">
-            <a class="waves-effect waves-light btn-large" style="background-color: rgb(123, 27, 36)" href="{{ path('role_sort') }}?sortBy=0">
+        <div class="col s6">
+            <a class="waves-effect btn-large zoom"  style="background-color: rgb(123, 27, 36)" href="{{ path('role_sort') }}?sortBy=0">
                 <i class="material-icons left">select_all</i>
                 Voir tout
             </a>
         </div>
 
-        <div class="col s6 zoom">
-            <a class="waves-effect waves-light btn-large" style="background-color: rgb(123, 27, 36)" href="{{ path('role_sort') }}?sortBy=1">
+        <div class="col s6">
+            <a class="waves-effect btn-large zoom" style="background-color: rgb(123, 27, 36)" href="{{ path('role_sort') }}?sortBy=1">
                 <i class="material-icons left">flag</i>
                 Faction
             </a>
@@ -60,7 +60,7 @@
 
                             <!-- Name -->
                             <div class="card-content">
-                                <h6 class="activator pointer center" style="font-weight: 600;color: {{ array.titleColor }}">
+                                <h6 class="activator pointer center" style="font-weight: 600; color: {{ role.getFactionColor }}">
                                     {{ role.name }}
                                 </h6>
                             </div>
