--- a/templates/roles/sort.html.twig
+++ b/templates/roles/sort.html.twig
@@ -60,7 +60,7 @@
 
                             <!-- Name -->
                             <div class="card-content">
-                                <h6 class="activator pointer center" style="font-weight: 600; color: {{ role.getFactionColor }}">
+                                <h6 class="truncate activator pointer center" style="font-weight: 600; color: {{ role.getFactionColor }}">
                                     {{ role.name }}
                                 </h6>
                             </div>
