--- a/templates/accounts/connection.html.twig
+++ b/templates/accounts/connection.html.twig
@@ -31,8 +31,8 @@
                     <!-- Username -->
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
-                        <input id="username" name="username" type="text" class="validate" required>
-                        <label for="username">Username</label>
+                        <input id="username-login" name="username" type="text" class="validate" required>
+                        <label for="username-login">Username</label>
                     </div>
 
                     <br>
@@ -40,8 +40,8 @@
                     <!-- Password -->
                     <div class="input-field">
                         <i class="material-icons prefix">security</i>
-                        <input id="password" name="password" type="password" class="validate" required>
-                        <label for="password">Password</label>
+                        <input id="password-login" name="password" type="password" class="validate" required>
+                        <label for="password-login">Password</label>
                     </div>
 
                     <br><br>
@@ -72,8 +72,8 @@
                     <!-- Username -->
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
-                        <input id="username" name="username" type="text" class="validate" required>
-                        <label for="username">Username</label>
+                        <input id="username-signin" name="username" type="text" class="validate" required>
+                        <label for="username-signin">Username</label>
                     </div>
                     
                     <br>
@@ -81,8 +81,9 @@
                     <!-- Email -->
                     <div class="input-field">
                         <i class="material-icons prefix">email</i>
-                        <input id="email" name="email" type="email" class="validate" required>
-                        <label for="email">Email</label>
+                        <input id="email-signin" name="email" type="email" class="validate" required>
+                        <label for="email-signin">Email</label>
+                        <span class="helper-text" data-error="invalid email syntax"></span>
                     </div>
 
                     <br>
@@ -90,8 +91,8 @@
                     <!-- Password -->
                     <div class="input-field">
                         <i class="material-icons prefix">security</i>
-                        <input id="password" name="password" type="password" class="validate" required>
-                        <label for="password">Password</label>
+                        <input id="password-signin" name="password" type="password" class="validate" required>
+                        <label for="password-signin">Password</label>
                     </div>
 
                     <br><br>
