--- a/templates/accounts/connection.html.twig
+++ b/templates/accounts/connection.html.twig
@@ -21,7 +21,7 @@
 
             <!-- Tab content : LOGIN -->
             <div id="login">
-                <form  method="post" class="container">
+                <form method="post" class="container">
 
                     <!-- Hidden CSRF token -->
                     <input hidden type="text" name="token" value="{{ csrf_token('account_login') }}">
@@ -31,8 +31,8 @@
                     <!-- Username -->
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
-                        <input id="username-login" name="username" type="text" class="validate" required>
-                        <label for="username-login">Username</label>
+                        <input id="username-login" name="username" type="text" class="validate" data-length="20" required>
+                        <label for="username-login">Nom d'utilisateur</label>
                     </div>
 
                     <br>
@@ -41,11 +41,12 @@
                     <div class="input-field">
                         <i class="material-icons prefix">security</i>
                         <input id="password-login" name="password" type="password" class="validate" required>
-                        <label for="password-login">Password</label>
+                        <label for="password-login">Mot de Passe</label>
                     </div>
 
                     <br><br>
 
+                    <!-- Submit -->
                     <div style="text-align: center;">
                         <button class="btn-large smallZoom" type="submit">
                             Log in !
@@ -62,7 +63,7 @@
 
             <!-- Tab content : SIGN IN -->
             <div id="signin">
-                <form  method="post" class="container">
+                <form method="post" class="container">
 
                     <!-- Hidden CSRF token -->
                     <input hidden type="text" name="token" value="{{ csrf_token('account_signin') }}">
@@ -72,8 +73,8 @@
                     <!-- Username -->
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
-                        <input id="username-signin" name="username" type="text" class="validate" required>
-                        <label for="username-signin">Username</label>
+                        <input id="username-signin" name="username" type="text" class="validate" data-length="20" required>
+                        <label for="username-signin">Nom d'utilisateur</label>
                     </div>
                     
                     <br>
@@ -92,11 +93,12 @@
                     <div class="input-field">
                         <i class="material-icons prefix">security</i>
                         <input id="password-signin" name="password" type="password" class="validate" required>
-                        <label for="password-signin">Password</label>
+                        <label for="password-signin">Mot de Passe</label>
                     </div>
 
                     <br><br>
 
+                    <!-- Submit -->
                     <div style="text-align: center;">
                         <button class="btn-large smallZoom" type="submit">
                             Sign in !
@@ -118,6 +120,7 @@
     <script>
         $(document).ready(function(){
             $('.tabs').tabs({swipeable : true});
+            $('input#username-login, input#username-signin').characterCounter();
         });
     </script>
 {% endblock %}
